agrego animaciones a rama

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </aside>
         <article class="main">
-            <div>
+            <div class="contenedorSubtitulo1">
                 <h2 class="subtitulo1">NIGHTWISH HISTORY</h2>
                     <p>Is a Finnish symphonic metal band from Kitee. The band was formed in 1996 by lead songwriter and keyboardist Tuomas Holopainen, guitarist Emppu Vuorinen, and former lead singer Tarja Turunen. The band soon picked up drummer Jukka Nevalainen, and then bassist Sami Vänskä after the release of their debut album, Angels Fall First (1997). In 2001, Vänskä was replaced by Marko Hietala, who also took over the male vocalist role previously filled by Holopainen or guest singers. 
     
