cambio home y carpetas

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <aside class="sidebar">
             <div class="titulo1">
                 <h2>Welcome to the Argentine fan page dedicated to Nightwish</h2>
+                <img src="./img/portadahome.png" alt="picture">
             </div>
         </aside>
         <article class="main">
