--- a/pages/band.html
+++ b/pages/band.html
@@ -33,27 +33,27 @@
             <div class="integrantes">
                     <h3>FLOOR JANSEN</h3>
                     <p> VOCALS 2013-Present</p>
-                        <img class="imagenBand" class="img1" src="/img/florr jansen.jpg">
+                        <img class="imagenBand" src="../img/florr jansen.jpg" alt="integrantes" >
             </div>
             <div class="integrantes">
                 <h3>TUOMAS HOLOPAINEN</h3>
                     <p class="letra"> kEYBOARDS 1996-Present</p>
-                        <img class="imagenBand" src="/img/TUOMAS HOLOPAINEN.jpg">
+                        <img class="imagenBand" src="../img/TUOMAS HOLOPAINEN.jpg" alt="integrantes">
             </div>
             <div class="integrantes">
                 <h3>EMPPU VUORINEN</h3>
                     <p class="letra"> GUITARS 1996-Present</p>
-                        <img class="imagenBand" src="/img/EMPPU VUORINEN.jpg">
+                        <img class="imagenBand" src="../img/EMPPU VUORINEN.jpg" alt="integrantes">
             </div>
             <div class="integrantes">
                 <h3>TROY DONOCKLEY</h3>
                     <p class="letra">UILLEANN PIPES, TIN WHISTLE, LOW WHISTLE, GUITARS, BOUZOUKI, BODHRÁN, VOCALS 2013-Present</p>
-                        <img class="imagenBand" src="/img/TROY DONOCKLEY.jpg">
+                        <img class="imagenBand" src="../img/TROY DONOCKLEY.jpg" alt="integrantes">
             </div>
             <div class="integrantes">
                 <h3>KAI HAHTO</h3>
                     <p class="letra"> DRUMS 2019-Present</p>
-                        <img class="imagenBand" src="/img/KAI Hahto1.jpg">
+                        <img class="imagenBand" src="../img/KAI Hahto1.jpg" alt="integrantes">
             </div>
         </div>
     </section>
