--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,7 +58,7 @@
         </div>
         <div class="contactoItem2">
             <div class="row">
-                <form class="formContact">
+                <form class="formContact col-xs-12 col-sm-6 col-md-6">
                     <div>
                         <label for="nombre">Name:</label>
                         <input class="caja" type="text" name="nombre" />
