--- a/pages/news.html
+++ b/pages/news.html
@@ -12,6 +12,7 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>News</title>
 </head>
 
@@ -55,7 +56,7 @@
     
     <section class="container-fluid">
         <div class="row">
-            <article class=" art col-xs-12 col-sm-6 col-md-6">
+            <article class=" animate__animated animate__fadeInLeft art col-xs-12 col-sm-6 col-md-6">
                 <h3>NIGHTWISH ONE OF THE WORLD'S MOST REACTED TO BANDS!
                     :|APRIL 19, 2022|:</h3><br>
                 <p>Among the most popular videos on YouTube are the so-called reaction videos, where YouTubers around
@@ -75,7 +76,7 @@
                     "Ghost Love Score" has the most reaction videos, with 1,400 different reaction videos and over 18
                     million views. And next week we are standing on the stage again in Finland!</p>
             </article>
-            <article class="art2 col-xs-12 col-sm-6 col-md-6">
+            <article class="art2  animate__animated animate__fadeInRight col-xs-12 col-sm-6 col-md-6">
                 <h3>VIRTUAL LIVE SHOW FROM THE ISLANDERS ARMS 2021 DVD ANNOUNCED
                     :|FEBRUARY 3, 2022|:</h3><br>
                 <p>On March 11 Nightwish releases the first night of the virtual event "An Evening With Nightwish in a
@@ -125,7 +126,7 @@
                     18. All the Works of Nature Which Adorn the World: VIII. Ad Astra. 3:36
                 </p>
             </article>
-            <article class="art col-xs-12 col-sm-6 col-md-6">
+            <article class="art  animate__animated animate__fadeInLeft col-xs-12 col-sm-6 col-md-6">
                 <h3>NEW VINYL REISSUES COMING OUT OCTOBER 2022!
                     :|JULY 18, 2022|:</h3><br>
                 <p>Nightwish are to release new re-issue 2LP vinyls of their classic albums on October 14th.
@@ -145,7 +146,7 @@
                     All color vinyls are limited to 500 pcs each.
                 </p>
             </article>
-            <article class="art2 col-xs-12 col-sm-6 col-md-6">
+            <article class="art2 animate__animated animate__fadeInRight col-xs-12 col-sm-6 col-md-6">
                 <h3>NIGHTWISH SHOW LIVE-STREAMED AT HELLFEST
                     :|JUNE 25, 2022|:</h3><br>
                 <iframe src="https://www.youtube.com/embed/pYIX1Jyb64E"
